fix: white space of msg-date

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -29,6 +29,7 @@
       .msg-date {
         font-size: 11px;
         opacity: 0.6;
+        white-space: nowrap;
       }
     }
 
